--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,16 +10,17 @@ jobs:
     name: Determine next version
     runs-on: ubuntu-latest
     outputs:
-      new_version: ${{ steps.semantic_release.outputs.new_release_version }}
+        new_version: ${{ steps.semantic_release.outputs.new_release_version }}
     steps:
-      - uses: actions/checkout@v3
+        - uses: actions/checkout@v3
 
-      - name: Calculate next semantic version
-        id: semantic_release
-        uses: gitversion/semantic-release-action@v3
-        with:
-          dry_run: false
-          build_metadata: false
+        - name: Calculate next semantic version
+          id: semantic_release
+          uses: cycjimmy/semantic-release-action@v4
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            dry_run: false
  
   build-linux:
     needs: bump-version
