--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,17 +10,27 @@ jobs:
     name: Determine next version
     runs-on: ubuntu-latest
     outputs:
-        new_version: ${{ steps.semantic_release.outputs.new_release_version }}
+      new_version: ${{ steps.semantic_release.outputs.new_version }}
     steps:
-        - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-        - name: Calculate next semantic version
-          id: semantic_release
-          uses: cycjimmy/semantic-release-action@v4
-          env:
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install python-semantic-release
+        run: pip install python-semantic-release
+
+      - name: Run python-semantic-release to publish and get version
+        id: semantic_release
+        run: |
+            semantic-release publish
+            version=$(semantic-release version)
+            echo "new_version=$version" >> $GITHUB_OUTPUT
+        env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          with:
-            dry_run: false
+
  
   build-linux:
     needs: bump-version
